# Sourcing-AI-Agent-Dev

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GITHUB_SYNC_PREP.md  ONBOARDING.md  README.md
sourcing-ai-agent/: .cursorignore  .gitignore  AGENTS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
sourcing-ai-agent/configs/: aliyun_ecs_trial_bootstrap.json  catalog.example.json  confidence_policy_freeze.example.json  confidence_policy_override.example.json  demo_current_infra.json  demo_investor_direct.json  demo_workflow_anthropic.json  demo_workflow_humansand_coding_researchers.json  demo_workflow_thinking_machines_lab.json  demo_workflow_thinking_machines_lab_former.json  demo_workflow_thinking_machines_lab_full_roster.json  demo_workflow_thinking_machines_lab_prioritized_detail.json  demo_workflow_thinking_machines_lab_publication.json  demo_workflow_thinking_machines_lab_publication_followup.json  demo_workflow_xai.json  deployment.local.example.json  explain_dry_run_matrix.example.json  live_queue_smoke_tml_former.json  live_test_google_keyword_cap_v3.json  live_test_google_keyword_first.json  live_test_google_keyword_first_v2.json  local_postgres.env.example  manual_review_resolve.example.json  manual_review_thinkingmachineslab_horace_he.json  manual_review_thinkingmachineslab_jeremy_bernstein.json  manual_review_thinkingmachineslab_john_schulman.json  manual_review_thinkingmachineslab_kevin_lu.json  manual_review_thinkingmachineslab_rabia_asharf.json  manual_review_thinkingmachineslab_sheikh_mohamed_ali.json  plan_review_approve.example.json  plan_review_tml_full_roster_approve_20260407.json  (+7 more)
(+871 files in other folders)
